--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "oclazyload": "^1.1.0",
     "angular-locale-pt-br": "^1.3.15",
     "jquery": "^3.3.1",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "angular-input-masks": "^2.6.0"
   }
 }
